# FA

./: .env.example  main.py  pyproject.toml  readme.md
api/: app.py
api/schemas/: users.py
api/views/: users.py
common/: setting.py
database/: engine.py  models.py
migrations/: env.py
migrations/versions/: 5678ab2f797a_auth.py
repositories/: auth.py  users.py
